Race condition between module script execution and FrameLoader's document completion check. https://bugs.webkit.org/show_bug.cgi?id=297939 rdar://159112160

Reviewed by Alex Christensen.

Module scripts that create microtasks were seeing inconsistent document.readyState values, the
module script itself saw "interactive" but Promise callbacks saw "complete". This happened
because FrameLoader::finishedParsing() was being called during microtask checkpoint execution.

The fix detects when attemptToRunDeferredScriptsAndEnd() is called during a microtask checkpoint
and defers the end() call using the regular task queue, ensuring finishedParsing() runs after
all microtasks complete.

* LayoutTests/TestExpectations:
* LayoutTests/http/wpt/dom/inline-module-script-timing-expected.txt: Added.
* LayoutTests/http/wpt/dom/inline-module-script-timing.html: Added.
* LayoutTests/http/wpt/dom/inline-module-script-with-imports-expected.txt: Added.
* LayoutTests/http/wpt/dom/inline-module-script-with-imports.html: Added.
* LayoutTests/http/wpt/dom/resources/delayed-module.js: Added.
* LayoutTests/imported/w3c/web-platform-tests/html/semantics/scripting-1/the-script-element/microtasks/evaluation-order-2-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/navigation-api/navigate-event/cross-origin-traversal-redirect-expected.txt:
* Source/WebCore/dom/Microtasks.h:
* Source/WebCore/html/parser/HTMLDocumentParser.cpp:
(WebCore::HTMLDocumentParser::notifyFinished):

Canonical link: https://commits.webkit.org/299282@main