Source/WebCore/html/parser/HTMLDocumentParser.cpp
@@ -41,8 +41,10 @@
 #include "JSCustomElementInterface.h"
 #include "LinkLoader.h"
 #include "LocalFrame.h"
+#include "Microtasks.h"
 #include "NavigationScheduler.h"
 #include "ScriptElement.h"
+#include "TaskSource.h"
 #include "ThrowOnDynamicMarkupInsertionCountIncrementer.h"
 
 #include <wtf/SystemTracing.h>
@@ -592,6 +594,15 @@ void HTMLDocumentParser::notifyFinished(PendingScript& pendingScript)
     ASSERT(m_scriptRunner);
     ASSERT(!isExecutingScript());
     if (isStopping()) {
+        // If we're currently in a microtask checkpoint, schedule end() as a regular task.
+        // This ensures it runs after ALL microtasks (including any created during execution) complete.
+        RefPtr document = this->document();
+        if (document->eventLoop().microtaskQueue().isPerformingCheckpoint()) {
+            document->eventLoop().queueTask(TaskSource::InternalAsyncTask, [protectedThis = Ref { *this }] {
+                protectedThis->attemptToRunDeferredScriptsAndEnd();
+            });
+            return;
+        }
         attemptToRunDeferredScriptsAndEnd();
         return;
     }
